--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 requests~=2.25.0
 tqdm~=4.53.0
-colorama~=0.4.4
+colorama~=0.4.4; platform_system == "Windows"
 beautifulsoup4~=4.9.3
 urllib3~=1.26.0
 pyusb~=1.1.0
